--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.0.12",
+    "redux-devtools-extension": "^2.13.8",
     "source-map-support": "^0.5.4"
   },
   "devDependencies": {
